tests/data/validations/exportto/dr_exportto_all_valid.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: "dr-exportto-all-valid"
  namespace: "bookinfo"
spec:
  host: "*.local"
  exportTo:
    - "*"
