tests/data/validations/exportto/dr_exportto_invalid.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
  name: "dr-exportto-valid"
  namespace: "bookinfo"
spec:
  host: "*.local"
  exportTo:
    - wrong1
    - bookinfo3
    - .
