tests/data/validations/exportto/se_exportto_all_valid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se_exportto_all_valid
  namespace: bookinfo
spec:
  hosts:
    - www.googleapis.com
  exportTo:
    - "*"
