tests/data/validations/exportto/se_exportto_invalid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se_exportto_valid
  namespace: bookinfo
spec:
  hosts:
    - www.googleapis.com
  exportTo:
    - wrong1
    - bookinfo3
    - .
