tests/data/validations/exportto/se_exportto_valid.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: se_exportto_valid
  namespace: bookinfo
spec:
  hosts:
    - www.googleapis.com
  exportTo:
    - bookinfo
    - bookinfo2
