tests/data/validations/exportto/vs_exportto_all_valid.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs_exportto_all_valid
  namespace: bookinfo
spec:
  hosts:
    - '*'
  exportTo:
    - '*'
