tests/data/validations/exportto/vs_exportto_invalid.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: vs_exportto_valid
  namespace: bookinfo
spec:
  hosts:
    - '*'
  exportTo:
    - wrong1
    - bookinfo3
    - .
